--- a/src/views/Timesheets/Timesheets.module.scss
+++ b/src/views/Timesheets/Timesheets.module.scss
@@ -6,6 +6,10 @@
   max-width: 500px;
 }
 
+.clockInOutButton {
+  font-weight: bold;
+}
+
 .timesheets {
   :global(.MuiGrid-item) {
     text-align: center;
